@@ -25,6 +25,9 @@ PHP                                                                        NEWS
   . Fixed bug GH-16032 (Various NULL pointer dereferencements in
     ldap_modify_batch()). (Girgias)
 
+- OpenSSL:
+  . Fixed stub for openssl_csr_new. (Jakub Zelenka)
+
 - PHPDBG:
   . Fixed bug GH-15901 (phpdbg: Assertion failure on i funcs). (cmb)
 
